# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml
configuration/: base.yaml  production.yaml
migrations/: 20240101135600_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs
src/domain/subscriber_email/: mod.rs  tests.rs
src/domain/subscriber_name/: mod.rs  tests.rs
src/email_client/: mod.rs  tests.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: common.rs  health_check.rs  subscriptions.rs
tests/apis/: common.rs  health_check.rs  subscriptions.rs
tests/apis/subscriptions/: confirm.rs  mod.rs
