[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1"
actix-web = "4"
config = "0.13"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1", features = ["full"] }


[dev-dependencies]
reqwest = "0.11"