[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
actix-web = "4"
chrono = { version = "0.4", features = ["clock"] }
config = "0.13"
claims = "0.7"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
sqlx = { version = "0.7", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0.16"

[dev-dependencies]
fake = "2"
linkify = "0.10"
quickcheck = "1"
quickcheck_macros = "1"
wiremock = "0.5"
